--- a/client/views/book_details.html
+++ b/client/views/book_details.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container" style="margin-top: 10px">
+    <a href="#!/books" class="btn btn-sm btn-secondary" style="margin: 5px">Go Back</a>
+    <div class="card" ng-init="getBook()">
+        <div class="card-header">
+            {{ book.title}}
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-4">
+                    <img ng-src="{{book.image_url}}" class="img-thumbnail">
+                </div>
+                <div class="col-md-8">
+                    <p>{{ book.description}}</p>
+                    <ul class="list-group">
+                        <li class="list-group-item">Genre: {{ book.genre}}</li>
+                        <li class="list-group-item">Author: {{ book.author}}</li>
+                        <li class="list-group-item">Publisher: {{ book.publisher}}</li>
+                        <li class="list-group-item">Pages: {{ book.pages}}</li>
+                    </ul>
+                    <br>
+                    <a href="{{ book.buy_url}}" class="btn btn-success">Buy</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
