--- a/client/views/books.html
+++ b/client/views/books.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container" style="margin-top: 10px">
+    <div class="card" ng-init="getBooks()">
+        <div class="card-header">
+            Latest Books
+        </div>
+        <div class="card-body">
+            <div ng-repeat="book in books">
+                <div class="row">
+                    <div class="col-md-4 offset-1">
+                        <img ng-src="{{book.image_url}}" class="img-thumbnail">
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="card-title">{{ book.title}}</h5>
+                        <p class="card-text">{{ book.description}}</p>
+                        <a href="#!/books/details/{{book._id}}" class="btn btn-primary">Details</a>
+                        <a href="{{ book.buy_url}}" class="btn btn-success">Buy</a>
+                    </div>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+</div>
