--- a/client/views/book_details.html
+++ b/client/views/book_details.html
@@ -18,9 +18,12 @@
                         <li class="list-group-item">Pages: {{ book.pages}}</li>
                     </ul>
                     <br>
-                    <a href="{{ book.buy_url}}" class="btn btn-success">Buy</a>
+                    <a href="{{ book.buy_url}}" target="_blank" class="btn btn-success">Buy</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div class="float-right">
+    <a href="#!/books/edit/{{book._id}}">Edit</a> | <a href="#!" ng-click="deleteBook(book._id)">Delete</a>
 </div>
