--- a/client/views/books.html
+++ b/client/views/books.html
@@ -13,7 +13,7 @@
                         <h5 class="card-title">{{ book.title}}</h5>
                         <p class="card-text">{{ book.description}}</p>
                         <a href="#!/books/details/{{book._id}}" class="btn btn-primary">Details</a>
-                        <a href="{{ book.buy_url}}" class="btn btn-success">Buy</a>
+                        <a href="{{ book.buy_url}}" target="_blank" class="btn btn-success">Buy</a>
                     </div>
                 </div>
                 <br>
