--- a/client/views/edit_book.html
+++ b/client/views/edit_book.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container" style="margin-top: 10px">
+    <a href="#!/books" class="btn btn-sm btn-secondary" style="margin: 5px">Go Back</a>
+    <div class="card">
+        <div class="card-header">
+            Edit Book
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6 offset-3">
+                    <form ng-init="getBook()" ng-submit="editBook()">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" class="form-control" ng-model="book.title" placeholder="Title" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Genre</label>
+                            <select ng-model="book.genre" class="form-control" required>
+                                <option value="Suspense">Suspense</option>
+                                <option value="Drama">Drama</option>
+                                <option value="Romance">Romance</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Author</label>
+                            <input type="text" class="form-control" ng-model="book.author" placeholder="Author"
+                                   required>
+                        </div>
+                        <div class="form-group">
+                            <label>Publisher</label>
+                            <input type="text" class="form-control" ng-model="book.publisher" placeholder="Publisher">
+                        </div>
+                        <div class="form-group">
+                            <label>Pages</label>
+                            <input type="text" class="form-control" ng-model="book.pages" placeholder="Pages">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                            <textarea class="form-control" ng-model="book.description"
+                                      placeholder="Description"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Image URL</label>
+                            <input type="text" class="form-control" ng-model="book.image_url" placeholder="Image URL">
+                        </div>
+                        <div class="form-group">
+                            <label>Buy URL</label>
+                            <input type="text" class="form-control" ng-model="book.buy_url" placeholder="Buy URL">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
